admin route updated

--- a/backend/views/admin/products.ejs
+++ b/backend/views/admin/products.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Hofmaan - Admin Products</title>
+    <title>Stayrare - Admin Products</title>
 
     <meta name="author" content="trivlogic">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo-2.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo-2.png">
+    <link rel="shortcut icon" href="/images/stayrare/fav.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/stayrare/fav.png">
     <style>
         /* Modal Styles */
         .modal {
@@ -569,8 +569,8 @@
                 <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
-                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/logo.png"
-                                data-light="/images/logo.png" data-dark="/images/logo.png">
+                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/stayrare/logo.png"
+                                data-light="/images/stayrare/logo.png" data-dark="/images/stayrare/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -680,8 +680,8 @@
                         <div class="wrap">
                             <div class="header-left">
                                 <a href="/admin/dashboard">
-                                    <img style="width: 50px;" id="logo_header_mobile" alt="" src="/images/logo.png"
-                                        data-light="/images/logo.png" data-dark="/images/logo.png">
+                                    <img style="width: 50px;" id="logo_header_mobile" alt="" src="/images/stayrare/logo.png"
+                                        data-light="/images/stayrare/logo.png" data-dark="/images/stayrare/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -705,7 +705,7 @@
                                                     <img src="/admin-images/avatar/user-1.png" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Hofmaan</span>
+                                                    <span class="body-text text-main-dark">Stayrare</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
@@ -2174,7 +2174,7 @@
                         </div>
 
                         <div class="bottom-page">
-                            <div class="body-text">Copyright © 2025 <a href="">Hofmaan</a>.
+                            <div class="body-text">Copyright © 2025 <a href="">Stayrare</a>.
                                 Developed by Trivlogic Private Limited All rights reserved</div>
                         </div>
                         <!-- /section-content-right -->
