--- a/backend/views/admin/users.ejs
+++ b/backend/views/admin/users.ejs
@@ -6,7 +6,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Hofmaan - Admin Dashboard</title>
+    <title>Stayrare - Admin Dashboard</title>
 
     <meta name="author" content="trivlogic.com">
 
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo-2.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo-2.png">
+    <link rel="shortcut icon" href="/images/stayrare/fav.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/stayrare/fav.png">
     <style>
         table,
         th,
@@ -51,8 +51,8 @@
                 <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
-                            <img style="width:60px;" id="logo_header" alt="Hofmaan" src="/images/logo.png"
-                                data-light="/images/logo.png" data-dark="/images/logo.png">
+                            <img style="width:60px;" id="logo_header" alt="Stayrare" src="/images/stayrare/logo.png"
+                                data-light="/images/stayrare/logo.png" data-dark="/images/stayrare/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -162,8 +162,8 @@
                         <div class="wrap">
                             <div class="header-left">
                                 <a href="/dashboard">
-                                    <img style="width: 50px;" id="logo_header_mobile" alt="Hofmaan"
-                                        src="/images/logo.png" data-light="img/logo.png" data-dark="img/logo.png">
+                                    <img style="width: 50px;" id="logo_header_mobile" alt="Stayrare"
+                                        src="/images/stayrare/logo.png" data-light="img/logo.png" data-dark="img/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -188,10 +188,10 @@
                                             id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="header-user wg-user">
                                                 <span class="image">
-                                                    <img src="/admin-images/avatar/user-1.png" alt="Hofmaan">
+                                                    <img src="/admin-images/avatar/user-1.png" alt="Stayrare">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Hofmaan</span>
+                                                    <span class="body-text text-main-dark">Stayrare</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
@@ -369,7 +369,7 @@
                         <!-- /main-content-wrap -->
                         <!-- bottom-page -->
                         <div class="bottom-page">
-                            <div class="body-text">Copyright © 2025 <a href="">Hofmaan</a>.
+                            <div class="body-text">Copyright © 2025 <a href="">Stayrare</a>.
                                 Developed by Trivlogic Private Limited All rights reserved</div>
                         </div>
                         <!-- /bottom-page -->
