--- a/backend/views/admin/blogs.ejs
+++ b/backend/views/admin/blogs.ejs
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
   
-    <title>Hofmaan  Blogs</title>
+    <title>Stayrare  Blogs</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo-2.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo-2.png">
+    <link rel="shortcut icon" href="/images/stayrare/fav.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/stayrare/fav.png">
     <style>
         /* Ensure toggle switch is visible */
         .peer:checked~.peer-checked\:bg-blue-600 {
@@ -191,8 +191,8 @@
                 <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/admin/dashboard" id="site-logo-inner">
-                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/logo.png"
-                                data-light="/images/logo.png" data-dark="/images/logo.png">
+                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/stayrare/logo.png"
+                                data-light="/images/stayrare/logo.png" data-dark="/images/stayrare/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -215,19 +215,18 @@
                                             <div class="text">Admin Dashboard</div>
                                         </a>
                                     </li>
-                                    <li class="menu-item">
+     <li class="menu-item">
                                         <a href="/admin/products" class="menu-item-button">
                                             <div class="icon"><i class="icon-file-plus"></i></div>
-                                            <div class="text">Package Management</div>
+                                            <div class="text">Product Management</div>
                                         </a>
-                                    
                                     </li>
-                                    <li class="menu-item">
+                                    <li class="menu-item ">
                                         <a href="/admin/category" class="menu-item-button">
                                             <div class="icon"><i class="icon-layers"></i></div>
                                             <div class="text">Category Management</div>
                                         </a>
-                                    
+                                      
                                     </li>
                                     <li class="menu-item">
                                         <a href="/admin/coupons" class="menu-item-button">
@@ -236,7 +235,19 @@
                                         </a>
                                       
                                     </li>
-                                    <li class="menu-item">
+                                    <li class="menu-item ">
+                                        <a href="/admin/orders" class="menu-item-button">
+                                            <div class="icon"><i class="icon-layers"></i></div>
+                                            <div class="text">Orders Management</div>
+                                        </a>
+                                    </li>
+                                    <li class="menu-item ">
+                                        <a href="/admin/users" class="menu-item-button">
+                                            <div class="icon"><i class="icon-layers"></i></div>
+                                            <div class="text">User Management</div>
+                                        </a>
+                                    </li>
+                                    <li class="menu-item ">
                                         <a href="/admin-banners" class="menu-item-button">
                                             <div class="icon">
                                                 <svg width="24" height="22" viewBox="0 0 22 18" fill="none"
@@ -248,28 +259,25 @@
                                             </div>
                                             <div class="text">Banner Management</div>
                                         </a>
+                                   
                                     </li>
-                                    <li class="menu-item">
+                                  
+                                    <li class="menu-item active">
+                                        <a href="/admin-blogs" class="menu-item-button">
+                                            <div class="icon"><i class="fa fa-users"></i></div>
+                                            <div class="text">Blogs Management</div>
+                                        </a>
+                                      
+                                    </li>
+                                    <li class="menu-item ">
                                         <a href="/admin-testimonials" class="menu-item-button">
                                             <div class="icon"><i class="fa fa-star-o"></i></div>
                                             <div class="text">Testimonials Management</div>
                                         </a>
+                                       
                                     </li>
                                     <li class="menu-item">
-                                        <a href="/admin-gallery" class="menu-item-button">
-                                            <div class="icon"><i class="icon-image"></i></div>
-                                            <div class="text">Gallery Management</div>
-                                        </a>
-                                    
-                                    </li>
-                                    <li class="menu-item active">
-                                        <a href="/admin-blogs" class="menu-item-button">
-                                            <div class="icon"><i class="icon-book-open"></i></div>
-                                            <div class="text">Blogs Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="/logout">
+                                        <a href="/auth/admin-logout" class="">
                                             <div class="icon">
                                                 <svg width="24" height="22" viewBox="0 0 20 20" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -295,8 +303,8 @@
                             <div class="header-left">
                                 <a href="/admin/dashboard">
                                     <img style="width: 50px;" id="logo_header_mobile" alt=""
-                                        src="/images/logo.png" data-light="/images/logo.png"
-                                        data-dark="/images/logo.png">
+                                        src="/images/stayrare/logo.png" data-light="/images/stayrare/logo.png"
+                                        data-dark="/images/stayrare/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -322,7 +330,7 @@
                                                     <img src="admin-images/avatar/user-1.png" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Hofmaan</span>
+                                                    <span class="body-text text-main-dark">Stayrare</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
