--- a/backend/views/admin/coupons.ejs
+++ b/backend/views/admin/coupons.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Hofmaan - Admin Coupons</title>
+    <title>Stayrare - Admin Coupons</title>
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo-2.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo-2.png">
+    <link rel="shortcut icon" href="/images/stayrare/fav.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/stayrare/fav.png">
     <style>
         .wg-table {
             width: 100%;
@@ -257,8 +257,8 @@
                 <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
-                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/logo.png"
-                                data-light="/images/logo.png" data-dark="/images/logo.png">
+                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/stayrare/logo.png"
+                                data-light="/images/stayrare/logo.png" data-dark="/images/stayrare/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -369,8 +369,8 @@
                             <div class="header-left">
                                 <a href="/admin/dashboard">
                                     <img style="width: 50px;" id="logo_header_mobile" alt=""
-                                        src="/images/logo.png" data-light="/images/logo.png"
-                                        data-dark="/images/logo.png">
+                                        src="/images/stayrare/logo.png" data-light="/images/stayrare/logo.png"
+                                        data-dark="/images/stayrare/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -396,7 +396,7 @@
                                                     <img src="/admin-images/avatar/user-1.png" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Hofmaan</span>
+                                                    <span class="body-text text-main-dark">Stayrare</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
@@ -954,7 +954,7 @@
                         <!-- /main-content-wrap -->
                         <!-- bottom-page -->
                         <div class="bottom-page">
-                            <div class="body-text">Copyright © 2025 <a href="">Hofmaan</a>.
+                            <div class="body-text">Copyright © 2025 <a href="">Stayrare</a>.
                                 Developed by Trivlogic Private Limited All rights reserved</div>
                         </div>
                         <!-- /bottom-page -->
