--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -268,7 +268,7 @@
       </a>
 
       <div class="logo">
-        <a href="index.html">
+        <a href="/">
           <img src="images/stayrare/logo.png" alt="Uomo" class="logo__image d-block">
         </a>
       </div><!-- /.logo -->
@@ -289,7 +289,7 @@
         <div class="overflow-hidden">
           <ul class="navigation__list list-unstyled position-relative">
             <li class="navigation__item">
-              <a href="index.html" class="navigation__link js-nav-right d-flex align-items-center">Home</a>
+              <a href="/" class="navigation__link js-nav-right d-flex align-items-center">Home</a>
 
             </li>
             <li class="navigation__item">
@@ -384,11 +384,11 @@
             </li>
 
             <li class="navigation__item">
-              <a href="about.html" class="navigation__link">About</a>
+              <a href="/about" class="navigation__link">About</a>
             </li>
             </li>
             <li class="navigation__item">
-              <a href="blogs.html" class="navigation__link">blogs</a>
+              <a href="/blogs" class="navigation__link">blogs</a>
             </li>
 
 
@@ -398,7 +398,7 @@
 
 
             <li class="navigation__item">
-              <a href="contact.html" class="navigation__link">Contact</a>
+              <a href="/contact" class="navigation__link">Contact</a>
             </li>
 
           </ul><!-- /.navigation__list -->
@@ -551,7 +551,7 @@
 
         <ul class="navigation__list list-unstyled d-flex">
           <li class="navigation__item">
-            <a href="index.html" class="navigation__link">Home</a>
+            <a href="/" class="navigation__link">Home</a>
 
           </li>
           <li class="navigation__item">
@@ -566,23 +566,23 @@
             </ul><!-- /.box-menu -->
           </li>
           <li class="navigation__item">
-            <a href="about.html" class="navigation__link">About</a>
+            <a href="/about" class="navigation__link">About</a>
           </li>
 
 
 
           <li class="navigation__item">
-            <a href="blogs.html" class="navigation__link">Blog</a>
+            <a href="/blogs" class="navigation__link">Blog</a>
 
           </li>
           <li class="navigation__item">
-            <a href="contact.html" class="navigation__link">Contact</a>
+            <a href="/contact" class="navigation__link">Contact</a>
           </li>
         </ul><!-- /.navigation__list -->
       </nav><!-- /.navigation -->
 
       <div class="logo">
-        <a href="index.html">
+        <a href="/">
           <img src="images/stayrare/logo.png" alt="Stayrare" class="logo__image d-block">
         </a>
       </div><!-- /.logo -->
@@ -1658,11 +1658,11 @@
         <div class="footer-column footer-menu mb-4 mb-lg-0">
           <h6 class="sub-menu__title text-uppercase">Company</h6>
           <ul class="sub-menu__list list-unstyled">
-            <li class="sub-menu__item"><a href="index.html" class="menu-link menu-link_us-s">Home</a></li>
-            <li class="sub-menu__item"><a href="about.html" class="menu-link menu-link_us-s">About Us</a></li>
+            <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
+            <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
             <li class="sub-menu__item"><a href="wishlist.html" class="menu-link menu-link_us-s"></a>Wishlist</li>
-            <li class="sub-menu__item"><a href="blogs.html" class="menu-link menu-link_us-s">Blogs</a></li>
-            <li class="sub-menu__item"><a href="contact.html" class="menu-link menu-link_us-s">Contact Us</a></li>
+            <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
+            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
           </ul>
         </div><!-- /.footer-column -->
 
@@ -1685,14 +1685,14 @@
             <li class="sub-menu__item"><a href="account.html" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="terms.html" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="privacy.html" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="contact.html" class="menu-link menu-link_us-s">Contact</a></li>
+            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact</a></li>
 
           </ul>
         </div><!-- /.footer-column -->
         <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
           <h5 class="sub-menu__title text-uppercase">Subscribe</h5>
           <p>Don’t miss a drop get product alerts, restock updates, and more delivered directly to you!</p>
-          <form action="https://uomo-html.flexkitux.com/Demo2/index.html"
+          <form action="https://uomo-html.flexkitux.com/Demo2//"
             class="footer-newsletter__form position-relative bg-body">
             <input class="form-control border-white" type="email" name="email" placeholder="Your email address">
             <input class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100" type="submit" value="JOIN">
@@ -1755,7 +1755,7 @@
   <footer class="footer-mobile container w-100 px-5 d-md-none bg-body">
     <div class="row text-center">
       <div class="col-3">
-        <a href="index.html" class="footer-mobile__link d-flex flex-column align-items-center">
+        <a href="/" class="footer-mobile__link d-flex flex-column align-items-center">
           <svg class="d-block" width="18" height="18" viewBox="0 0 18 18" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <use href="#icon_home" />
