--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -294,7 +294,7 @@
 
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Store
+              <a href="" class="navigation__link js-nav-right d-flex align-items-center">Store
                 <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11" xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_next_sm" />
                 </svg>
@@ -435,8 +435,8 @@
   <header id="header" class="header header-fullwidth header-transparent-bg">
     <div class="header-top d-flex top-hdr color-white align-items-center">
       <ul class="list-unstyled d-flex flex-1 gap-3 m-0">
-        <li><a href="orderTrack.html" class="menu-link menu-link_us-s color-white">Shipping</a></li>
-        <li><a href="orders.html" class="menu-link menu-link_us-s color-white"> Orders</a></li>
+        <li><a href="/account" class="menu-link menu-link_us-s color-white">Shipping</a></li>
+        <li><a href="/account" class="menu-link menu-link_us-s color-white"> Orders</a></li>
       </ul>
 
       <!-- Marquee Container with more width, catchy sentence, and infinite loop -->
@@ -597,7 +597,7 @@
                 <div class="sub-menu search-suggestion">
                   <h6 class="sub-menu__title fs-base">Quicklinks</h6>
                   <ul class="sub-menu__list list-unstyled">
-                    <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">New Arrivals</a>
+                    <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">New Arrivals</a>
                     </li>
                     <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Dresses</a></li>
                     <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Accessories</a></li>
